# ros2-dds-zenoh-comparison

./: .gitignore  .gitmodules  README.md  cyclonedds.pub.xml  cyclonedds.sub.xml  env.bash  env.sh  env.zsh  qos_override.yaml
100m/rosbag2_2023_05_24-12_15_20/: metadata.yaml  rosbag2_2023_05_24-12_15_20_0.db3
demo/: READMD.md  README.md  demo.rviz
sample-data/: metadata.yaml
scripts/: check.sh  compare-pcd-gen.sh  compare.sh  plot.py  run_pub.sh  run_sub.sh
scripts/node_num/: node_num_test.sh
src/: .gitignore  ros2.repos
src/comparison/: CMakeLists.txt  package.xml
src/comparison/config/: ros_pcd_gen.yaml  ros_pub.yaml  zenoh_pcd_gen.yaml
src/comparison/include/: counter.hpp  pcd_generator.hpp  transfer.hpp
src/comparison/launch/: pure_ros_pub.py  pure_zenoh_pub.py  ros_pcd_gen.py  ros_pub.py  ros_sub.py  zenoh_pcd_gen.py  zenoh_pub.py  zenoh_sub.py
src/comparison/src/frame_rate_counter/: ros_sub.cpp  zenoh_sub.cpp
src/comparison/src/pcd_generator/: ros_pcd_gen.cpp  ros_pub.cpp  zenoh_pcd_gen.cpp  zenoh_pub.cpp
src/comparison/src/transfer/: pure_ros_pub.cpp  pure_zenoh_pub.cpp  ros_pub.cpp  zenoh_pub.cpp
src/transfer/: CMakeLists.txt  package.xml
src/transfer/config/: ros_pub.yaml  zenoh_pub.yaml
src/transfer/launch/: ros_pub.py  zenoh_pub.py
src/transfer/src/: ros_pub.cpp  zenoh_pub.cpp
tests/pure/shared-memory/cyclonedds/enable-shm/: plot.py  test.sh
